--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@ Ein Webserver ist noch immer ueberfluessig.
     <script src="wc_langPacks/wc_langPack_DE.js"></script>
     <script src="wc_langPacks/wc_langPack_DE_SWG.js"></script>
     <script src="wc_langPacks/wc_langPack_CH_BERN.js"></script>
+    <script src="wc_langPacks/wc_langPack_CH_SZ.js"></script>
     <script src="wc_langPacks/wc_langPack_EN.js"></script>
     <script src="wc_langPacks/wc_langPack_NL.js"></script>
 
